force-app/main/default/objects/Rounds_Session__c/Rounds_Session__c.object-meta.xml
<CustomObject>
    <label>Rounds Session</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Rounds Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounds Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>