force-app/main/default/objects/Rounds_Session__c/fields/Attendee_count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_count__c</fullName>
    <label>Attendee count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>