force-app/main/default/objects/Rounds_Session__c/fields/CE_Credits__c.field-meta.xml
<CustomField>
    <fullName>CE_Credits__c</fullName>
    <inlineHelpText>Were CME/CEU credits offered for this session for...?</inlineHelpText>
    <label>CE Credits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No credits offered</fullName>
            </value>
            <value>
                <fullName>Physicians</fullName>
            </value>
            <value>
                <fullName>Nurses</fullName>
            </value>
            <value>
                <fullName>Social Workers</fullName>
            </value>
            <value>
                <fullName>Psychologists</fullName>
            </value>
            <value>
                <fullName>Spiritual Care Providers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Credits were offered but unsure to whom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>