force-app/main/default/objects/Rounds_Session__c/fields/Chaplain__c.field-meta.xml
<CustomField>
    <fullName>Chaplain__c</fullName>
    <formula>Chaplains_Count__c  /  Attendee_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chaplain%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>