force-app/main/default/objects/Rounds_Session__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <formula>Doctor_Count__c  /  Attendee_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>