force-app/main/default/objects/Rounds_Session__c/fields/Doctor_Count__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Count__c</fullName>
    <label>Doctor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>