force-app/main/default/objects/Rounds_Session__c/fields/Eval_Data_Form__c.field-meta.xml
<CustomField>
    <fullName>Eval_Data_Form__c</fullName>
    <description>Date we received a summary of attendees&apos; evaluation forms</description>
    <label>Eval Data Form</label>
    <type>Date</type>
</CustomField>