force-app/main/default/objects/Rounds_Session__c/fields/Evaluation_Excellent_Count__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Excellent_Count__c</fullName>
    <label>Evaluation - Excellent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>