force-app/main/default/objects/Rounds_Session__c/fields/Evaluation_Poor__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Poor__c</fullName>
    <formula>Evaluation_Poor_Count__c  /  Evaluations_completed_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation - Poor%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>