force-app/main/default/objects/Rounds_Session__c/fields/Evaluation_summary_received_date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_summary_received_date__c</fullName>
    <label>Original data received date</label>
    <type>Date</type>
</CustomField>