force-app/main/default/objects/Rounds_Session__c/fields/Evaluations_completed_count__c.field-meta.xml
<CustomField>
    <fullName>Evaluations_completed_count__c</fullName>
    <label>Evaluations completed count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>