force-app/main/default/objects/Rounds_Session__c/fields/Facilitator2__c.field-meta.xml
<CustomField>
    <fullName>Facilitator2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Some sessions have more than one facilitator llsted</description>
    <label>Facilitator2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rounds Sessions</relationshipLabel>
    <relationshipName>Rounds_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>