force-app/main/default/objects/Rounds_Session__c/fields/Facilitator_Contact__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rounds Sessions</relationshipLabel>
    <relationshipName>Rounds_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>