force-app/main/default/objects/Rounds_Session__c/fields/Nurses__c.field-meta.xml
<CustomField>
    <fullName>Nurses__c</fullName>
    <formula>Nurses_Count__c  /  Attendee_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nurses%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>