force-app/main/default/objects/Rounds_Session__c/fields/Nurses_Count__c.field-meta.xml
<CustomField>
    <fullName>Nurses_Count__c</fullName>
    <label>Nurses Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>