force-app/main/default/objects/Rounds_Session__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <formula>Other_Count__c  /  Attendee_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>