force-app/main/default/objects/Rounds_Session__c/fields/Other_Count__c.field-meta.xml
<CustomField>
    <fullName>Other_Count__c</fullName>
    <label>Other Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>