force-app/main/default/objects/Rounds_Session__c/fields/Percent_Evaluations_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Evaluations_Completed__c</fullName>
    <formula>Evaluations_completed_count__c / Attendee_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Evaluations Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>