force-app/main/default/objects/Rounds_Session__c/fields/Rounds_Mode__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Mode__c</fullName>
    <label>Rounds Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SR_Session_Mode</valueSetName>
    </valueSet>
</CustomField>