force-app/main/default/objects/Rounds_Session__c/fields/Rounds_Program__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TEST-Rounds Program</label>
    <referenceTo>ORIG_Rounds_Program__c</referenceTo>
    <relationshipLabel>Rounds Sessions</relationshipLabel>
    <relationshipName>Rounds_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>