force-app/main/default/objects/Rounds_Session__c/fields/Rounds_Type__c.field-meta.xml
<CustomField>
    <fullName>Rounds_Type__c</fullName>
    <label>Rounds Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SR_Session_Type</valueSetName>
    </valueSet>
</CustomField>