force-app/main/default/objects/Rounds_Session__c/fields/Session_ID2__c.field-meta.xml
<CustomField>
    <fullName>Session_ID2__c</fullName>
    <formula>TEXT(Session_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session ID2</label>
    <type>Text</type>
</CustomField>