force-app/main/default/objects/Rounds_Session__c/fields/Session_ID3__c.field-meta.xml
<CustomField>
    <fullName>Session_ID3__c</fullName>
    <formula>Account__r.Organization_Code__c  &amp;   Session_ID2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session ID3</label>
    <type>Text</type>
</CustomField>