force-app/main/default/objects/Rounds_Session__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <formula>MID(Name, 6, LEN(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session ID</label>
    <type>Text</type>
</CustomField>