force-app/main/default/objects/Rounds_Session__c/fields/Session_Info_Form__c.field-meta.xml
<CustomField>
    <fullName>Session_Info_Form__c</fullName>
    <description>Date the SR Coordinator completed the online Session Information Form</description>
    <label>Session Info Form</label>
    <type>Date</type>
</CustomField>