force-app/main/default/objects/Rounds_Session__c/fields/Shared_Topic__c.field-meta.xml
<CustomField>
    <fullName>Shared_Topic__c</fullName>
    <label>National Shared Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2017 - What Happens to Compassion during an Opioid Epidemic?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>