force-app/main/default/objects/Rounds_Session__c/fields/Social_Workers__c.field-meta.xml
<CustomField>
    <fullName>Social_Workers__c</fullName>
    <formula>Social_Workers_Count__c  /  Attendee_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Social Workers%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>