force-app/main/default/objects/Rounds_Session__c/fields/Social_Workers_Count__c.field-meta.xml
<CustomField>
    <fullName>Social_Workers_Count__c</fullName>
    <label>Social Workers Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>