force-app/main/default/objects/Rounds_Session__c/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <label>Submitted by</label>
    <type>Email</type>
</CustomField>