force-app/main/default/objects/Rounds_Session__c/fields/Topic_Tags__c.field-meta.xml
<CustomField>
    <fullName>Topic_Tags__c</fullName>
    <label>Topic Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caregiver as Patient</fullName>
            </value>
            <value>
                <fullName>Caregiver Roles</fullName>
            </value>
            <value>
                <fullName>Challenging Patient Situations</fullName>
            </value>
            <value>
                <fullName>Colleagues</fullName>
                <label>Collaboration, Teamwork, and Communication with Colleagues</label>
            </value>
            <value>
                <fullName>Compassion and COVID</fullName>
            </value>
            <value>
                <fullName>Compassionate Care</fullName>
            </value>
            <value>
                <fullName>Condition or Disease Specific</fullName>
            </value>
            <value>
                <fullName>Culture, Ethnicity, and Race</fullName>
            </value>
            <value>
                <fullName>Disasters</fullName>
            </value>
            <value>
                <fullName>Domestic Violence and Human Trafficking</fullName>
            </value>
            <value>
                <fullName>Elders</fullName>
            </value>
            <value>
                <fullName>End of Life Care</fullName>
            </value>
            <value>
                <fullName>Ethics</fullName>
            </value>
            <value>
                <fullName>Family Members</fullName>
            </value>
            <value>
                <fullName>Gender and Sexuality</fullName>
            </value>
            <value>
                <fullName>Grief</fullName>
            </value>
            <value>
                <fullName>Homelessness</fullName>
            </value>
            <value>
                <fullName>Humor</fullName>
            </value>
            <value>
                <fullName>Immigrants and Refugees</fullName>
            </value>
            <value>
                <fullName>Medical Errors, Adverse Outcomes, and Clinical Complications</fullName>
            </value>
            <value>
                <fullName>Nutrition</fullName>
            </value>
            <value>
                <fullName>Organ Donation</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Patient-Caregiver Relationships and Communication</fullName>
            </value>
            <value>
                <fullName>Patient Narratives</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Resilience and Self-Care for Caregivers</fullName>
            </value>
            <value>
                <fullName>Seasonal and Holidays</fullName>
            </value>
            <value>
                <fullName>Spirituality and Religion</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>