force-app/main/default/objects/Rounds_Session__c/fields/Virtual_Platform__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Platform__c</fullName>
    <inlineHelpText>For virtual sessions, which platform was used, e.g. Zoom, WebEx</inlineHelpText>
    <label>Virtual Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>